syntax = "proto3";

package auth;

option go_package = "github.com/sout1235/forum2/auth-service/proto";

service AuthService {
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string user_id = 1;
} 